--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<div>
-    {{location$ | async}}
-</div>
-<br>
 <form class="location-form">
     <mat-form-field class="example-full-width" appearance="standard">
         <mat-label>Find location</mat-label>
@@ -19,10 +15,9 @@
 
 <hr>
 
-<br>
 <div *ngIf="isHourlyData$ | async as weatherData; then hourly else daily"></div>
 <ng-template #daily>
-    <table>
+    <table *ngIf="locations.length">
         <thead>
             <th>Location</th>
             <th *ngFor="let day of dailyWeatherData">{{day.dt*1000 | date:'MMM d. EEE'}}</th>
@@ -41,7 +36,7 @@
 </ng-template>
 
 <ng-template #hourly>
-    <table>
+    <table *ngIf="locations.length">
         <thead>
             <th>Location</th>
             <th *ngFor="let hour of hourlyWeatherData">{{hour.dt*1000 | date:'EEE HH:mm'}}</th>
